# spotify-track-popularity

./: pyproject.toml
src/spotify_track_popularity/: __init__.py  constants.py  dagster_utils.py
src/spotify_track_popularity/assets/: popularity_prediction_model.py  spotify_tracks.py  spotify_tracks_features.py  train_data_balanced.py  train_test.py
src/spotify_track_popularity/io_managers/: csv_fs_io_manager.py
src/spotify_track_popularity/resources/: kagge_dataset_downloader.py  mlflow_session.py
