[project]
name = "spotify-track-popularity"
version = "0.1.0"
description = "Track popularity model training pipeline"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dagster-webserver>=1.8.11",
    "dagster>=1.8.11",
    "imblearn>=0.0",
    "kaggle>=1.6.17",
    "mlflow>=2.17.0",
    "pandas>=2.2.3",
    "scikit-learn>=1.5.2",
    "xgboost>=2.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
select = ['E', 'F', 'W', 'A', 'PLC', 'PLE', 'PLW', 'I']
